[gh-pages] fix: breaking slash /

--- a/index.html
+++ b/index.html
@@ -348,6 +348,6 @@
 
     </div>
 
-    <script type="text/javascript" src="/built/assets/js/bundle.js" charset="utf-8"></script>
+    <script type="text/javascript" src="built/assets/js/bundle.js" charset="utf-8"></script>
 </body>
 </html>
